fix input overflow and change app description (#59)
* util to utils

* fix searching in result page

* add class for actions.

* function for getting route

* improve welcome page

* improve result page

* enlarge image div

* pad for magnifier icon

* change description

--- a/client/src/routes/Result/result.css
+++ b/client/src/routes/Result/result.css
@@ -11,6 +11,7 @@
 
 .search-bar {
     padding-left: 10px;
+    padding-right: 55px;
     width: 100%;
     height: 50px;
     border: 3px solid white;
